# V2M-Agent

./: .env  .env.example  .gitignore  AGENTS.md  CLAUSE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Output/scene_17/: audio.jsonl  lyric.jsonl  photo.jsonl  pipeline_meta.json  scene.jsonl  team1_result.json  team2_result.json  team2_task_packet.json  team3_result.json  team3_task_packet.json  text.jsonl  video.jsonl
Team1/: config_requirement_supervisor.json
Team1/AgentProfile/: requirement_supervisor_profile.py  requirement_verifier_profile.py
Team1/supervisor/: requirement_supervisor.py
Team1/verifier/: requirement_verifier.py
Team2/: config_scene_understanding.json
Team2/AgentProfile/: audio_agent_profile.py  photo_agent_profile.py  scene_understanding_supervisor_profile.py  scene_verifier_profile.py  text_agent_profile.py  video_agent_profile.py
Team2/Expert/: audio.py  config_audio.json  config_photo.json  config_text.json  config_video.json  photo.py  prompt.py  reflection_agent_profile.py  (+4 more)
Team3/: config_music_generation.json
client/: client.py  client_agent_profile.py  client_config.py  config_client_server.json  file_handler.py  ssh_manager.py  test_client_server.py
promptStrategy/: __init__.py  system_prompt_body.py  system_prompt_header.py  system_prompt_profile.py
server/: __init__.py  generate.py  inference_runner.py  server.py  server_agent_profile.py  task_manager.py
task/: README.md  __init__.py  examples.py  scene_analyzer.py  task_create.py  task_generator.py  task_profile.py
tools/: live_status.py  tools.py
(+25 files in other folders)
