[project]
name = "prompt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "aiohttp>=3.13.2",
    "langchain[openai]>=1.1.3",
    "langchain-core>=1.1.2",
    "langgraph>=0.1.8",
    "openai>=2.9.0",
    "uvicorn>=0.38.0",
    "langchain-mcp-adapters>=0.2.1",
    "nest-asyncio>=1.6.0",
    # Client-Server dependencies
    "python-socketio>=5.10.0",
    "requests>=2.31.0",
    "paramiko>=3.4.0",
    # Server dependencies
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "opencv-python>=4.12.0.88",
    "pycryptodome>=3.23.0",
    "websocket-client>=1.9.0",
    "langchain-openai>=1.1.1",
    "typing-extensions>=4.15.0",
    "dotenv>=0.9.9",
]

[tool.uv.workspace]
members = [
    "src",
]
